--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,18 @@
 [submodule "native/tree-sitter"]
 	path = native/tree-sitter
-	url = git@github.com:JetBrains/tree-sitter.git
+	url = https://github.com/tree-sitter/tree-sitter.git
 [submodule "native/grammars/tree-sitter-go"]
 	path = native/grammars/tree-sitter-go
-	url = git@github.com:JetBrains/tree-sitter-go.git
+	url = https://github.com/tree-sitter/tree-sitter-go.git
 [submodule "native/grammars/tree-sitter-json"]
 	path = native/grammars/tree-sitter-json
-	url = git@github.com:tree-sitter/tree-sitter-json.git
+	url = https://github.com/tree-sitter/tree-sitter-json.git
+[submodule "native/grammars/tree-sitter-java"]
+	path = native/grammars/tree-sitter-java
+	url = https://github.com/tree-sitter/tree-sitter-java.git
+[submodule "native/grammars/tree-sitter-python"]
+	path = native/grammars/tree-sitter-python
+	url = https://github.com/tree-sitter/tree-sitter-python.git
+[submodule "native/grammars/tree-sitter-javascript"]
+	path = native/grammars/tree-sitter-javascript
+	url = https://github.com/tree-sitter/tree-sitter-javascript.git
